2011-05-05  Abhishek Arya  <inferno@chromium.org>

        Unreviewed.

        Minor rebaselines for qt after my r85876.

        * platform/qt/fast/block/float/float-not-removed-from-next-sibling-expected.txt: Added.
        * platform/qt/fast/block/float/float-not-removed-from-next-sibling2-expected.txt: Added.
        * platform/qt/fast/block/float/float-not-removed-from-next-sibling3-expected.txt: Added.
        * platform/qt/fast/block/float/float-not-removed-from-next-sibling4-expected.txt: Added.

2011-06-17  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Dave Hyatt.

        Tests that we do not crash when unable to remove floats from
        parent's next siblings blocks.
        https://bugs.webkit.org/show_bug.cgi?id=62875

        * fast/block/float/float-not-removed-from-next-sibling5-expected.txt: Added.
        * fast/block/float/float-not-removed-from-next-sibling5.html: Added.

2011-05-10  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Simon Fraser.

        Tests that we do not crash due to wrong result from
        hasOverhangingFloats.
        https://bugs.webkit.org/show_bug.cgi?id=60537

        * fast/block/float/no-overhanging-float-crash-expected.txt: Added.
        * fast/block/float/no-overhanging-float-crash.html: Added.

2011-05-04  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Dave Hyatt.

        Tests that we do not crash when trying to add overflow from a float not in the
        descendant list and whose renderer is already removed.
        https://bugs.webkit.org/show_bug.cgi?id=56299

        * fast/block/float/float-not-removed-from-next-sibling-crash-expected.txt: Added.
        * fast/block/float/float-not-removed-from-next-sibling-crash.html: Added.
        * fast/block/float/float-not-removed-from-next-sibling.html: Added. Black
        text boxes should be inside the silver float. Failing test will have float
        added to the text div block which will push the text downward.